--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -45,19 +45,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Components\LastName.cs" />
-    <Compile Include="Components\FirstName.cs" />
-    <Compile Include="Validation\Exceptions\ExceptionRequired.cs" />
-    <Compile Include="Validation\Exceptions\ExceptionAlphaSpaces.cs" />
-    <Compile Include="Validation\Exceptions\ExceptionAlpha.cs" />
+    <Compile Include="Components\Components.cs" />
+    <Compile Include="Components\IsAdmin.cs" />
+    <Compile Include="Components\SecretKey.cs" />
+    <Compile Include="Components\CreatedDate.cs" />
+    <Compile Include="Components\LastLogin.cs" />
+    <Compile Include="Components\Counter.cs" />
+    <Compile Include="Components\Password.cs" />
+    <Compile Include="Components\Username.cs" />
+    <Compile Include="Components\Lastname.cs" />
+    <Compile Include="Components\Firstname.cs" />
+    <Compile Include="Components\ComponentsException.cs" />
+    <Compile Include="Credentials\Credentials.cs" />
+    <Compile Include="Validation\IsDateTime.cs" />
+    <Compile Include="Validation\IsNumeric.cs" />
+    <Compile Include="Validation\ValidationException.cs" />
+    <Compile Include="Validation\IsPassword.cs" />
+    <Compile Include="Validation\IsAlphaNumeric.cs" />
     <Compile Include="SystemUser\SystemUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validation\IsAlphaSpaces.cs" />
     <Compile Include="Validation\IsAlpha.cs" />
     <Compile Include="Validation\IsRequired.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Credentials\" />
+    <Compile Include="Validation\Operators.cs" />
+    <Compile Include="Validation\Validation.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
